Fixes list, list header and list item styles (+1 squashed commit) Squashed commits: [7e88c37] All HousingCompanyListPage styles fixed to resemble planned layout

--- a/frontend/src/styles/abstracts/_typography.sass
+++ b/frontend/src/styles/abstracts/_typography.sass
@@ -11,15 +11,16 @@ body
   line-height: $lineheight-l
   border-bottom: 1px solid #ccc
   margin: 0 0 32px
+
   button
     font-size: $fontsize-body-l
     margin: $spacing-s 0
+
   .company &
     margin-bottom: 16px
 
-.results
-  .list-headers, .name
-    font-weight: 700
+.results-list .name
+  font-weight: 700
 
 a
   text-decoration: inherit
