--- a/frontend/src/styles/components/ApartmentList.sass
+++ b/frontend/src/styles/components/ApartmentList.sass
@@ -1,4 +1,7 @@
 .apartment-list__wrapper
+  .list-amount
+    display: none
+
   .results
     grid-column-start: 1
     grid-column-end: 3
